[tool.poetry]
name = "cipher_mz2884"
version = "0.1.0"
description = "HW7 for MDS Fall 2022 columbia"
authors = ["Mengdi Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
